agregar una seccion al index

--- a/index.html
+++ b/index.html
@@ -17,5 +17,9 @@
         <li>repositorys</li>
         <li>repositorys</li>
     </ul>
+    <h2>Mas cosas por ver</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quia?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quia?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quia?</p>
 </body>
 </html>
